--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   margin: 0;
   padding: 0;
   font-family: 'Rubik', sans-serif;
-  background: #040404;
   color: #fff;
+}
+
+body {
+  background-color: #040404;
 }
