--- a/src/assets/style/home.css
+++ b/src/assets/style/home.css
@@ -82,3 +82,59 @@ h1{
     -webkit-text-fill-color: transparent;
     font-weight: 400;
 }
+
+@media (max-width: 1200px) {
+    .home-container {
+        margin: 53px 5% 0 5%;
+    }
+
+    .header {
+        position: relative;
+        background-image: url('../img/collage_imagenes.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .header::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Apply the filter */
+        z-index: 1; /* Ensure the overlay appears on top of the background image */
+      }
+
+    .top-left-image {
+        padding-top: 5%;
+        padding-left: 5%;
+        z-index: 2;
+    }
+
+    .flex-container {
+        padding-left: 5%;
+        padding-bottom: 5%;
+        z-index: 2;
+    }
+  
+    .banner-container {
+      display: none;
+    }
+  }
+  
+@media (max-width: 800px) {
+    .home-container {
+        margin: 30px 2% 0 2%;
+    }
+
+    .top-left-image {
+        padding-top: 5%;
+        padding-left: 5%;
+    }
+
+    .flex-container {
+        padding-left: 5%;
+        padding-bottom: 5%;
+    }
+}
