--- a/src/components/video-button/video-button.css
+++ b/src/components/video-button/video-button.css
@@ -84,32 +84,32 @@
     background: rgba(0, 0, 0, 0.7);
     display: flex;
     justify-content: center;
-    align-items: flex-start; /* Align content to the top */
+    align-items: flex-start;
     position: fixed;
     top: 50px;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 3; /* Ensure the overlay is on top of everything */
+    z-index: 3;
   }
 
   .video-modal {
     width: 80%;
     height: 500px;
     padding: 10px;
-    top: 20px; /* Adjust the top position */
+    top: 20px;
     left: 0;
   }
 
   .close-button {
-    top: 10px;
-    right: 10px;
-    z-index: 5; /* Ensure the close button is on top of the modal */
+    top: 5px;
+    right: 5px;
+    z-index: 5;
   }
 
   .video-button-container {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center the button in a column layout */
+    align-items: center;
   }
 }
