--- a/src/components/swipers/isegh-img/isegh-imgs.css
+++ b/src/components/swipers/isegh-img/isegh-imgs.css
@@ -13,3 +13,9 @@
     width: auto;
     max-width: 100%;
 }
+
+@media (max-width: 800px) {
+    .imgs-container>img {
+        height: 350px;
+    }
+}
